--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <script type="text/javascript">
 <!--
 function bekle(){
-    window.location = "https://twitter.feign.tk/"
+    window.location = "https://twitter.feign-wiki.tk/"
 }
 //-->
 </script>
